fix double links on mobile

--- a/src/components/menu/index.css
+++ b/src/components/menu/index.css
@@ -175,7 +175,7 @@
     z-index: 1;
 }
 
-li.desktop-settings-link {
+li.desktop-only-link {
     display: none;
 }
 
